--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
   <body>
     <div class="container">
     <div class="card">
-      <h1 class="title">POLICIES</h1>
+      <h1 class="title">FAQ</h1>
       <ul class="questions">
         <li>
-          <p class="q">Refunds and Returns</p>
-          <img src="assets/images/icon-plus.svg" class="plus">
+          <p class="q">What is Frontend Mentor, and how will it help me?</p>
+          <img src="icon-plus.svg" class="plus">
           <p class="desc"></p>
         </li>
 
         <li>
-          <p class="q">Shipping and Handling</p>
-          <img src="assets/images/icon-plus.svg" class="plus">
+          <p class="q">Is Frontend Mentor Free?</p>
+          <img src="icon-plus.svg" class="plus">
           <p class="desc"></p>
         </li>
 
         <li>
-          <p class="q">Privacy and Ownership</p>
-          <img src="assets/images/icon-plus.svg" class="plus">
+          <p class="q">Can I use Frontend Mentor projects in my portfolio?</p>
+          <img src="icon-plus.svg" class="plus">
           <p class="desc"></p>
         </li>
 
         <li>
-          <p class="q last">Terms of Service</p>
-          <img src="assets/images/icon-plus.svg" class="plus">
+          <p class="q last">How can I get help If i'm stuck on a challenge?</p>
+          <img src="icon-plus.svg" class="plus">
           <p class="desc"></p>
         </li>
       </ul>
