--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
       <h1 class="title">FAQ</h1>
       <ul class="questions">
         <li>
-          <p class="q">What is Frontend Mentor, and how will it help me?</p>
+          <p class="q">Refunds and Returns</p>
           <img src="icon-plus.svg" class="plus">
           <p class="desc"></p>
         </li>
 
         <li>
-          <p class="q">Is Frontend Mentor Free?</p>
+          <p class="q">Shipping and Handling</p>
           <img src="icon-plus.svg" class="plus">
           <p class="desc"></p>
         </li>
 
         <li>
-          <p class="q">Can I use Frontend Mentor projects in my portfolio?</p>
+          <p class="q">Privacy and Ownership</p>
           <img src="icon-plus.svg" class="plus">
           <p class="desc"></p>
         </li>
 
         <li>
-          <p class="q last">How can I get help If i'm stuck on a challenge?</p>
+          <p class="q last">Terms of Service</p>
           <img src="icon-plus.svg" class="plus">
           <p class="desc"></p>
         </li>
